--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==3.0.0
+Flask==2.3.3
 requests==2.31.0
-numpy==1.26.0
-pandas==2.1.4
-scikit-learn==1.3.2
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+tensorflow-cpu==2.13.0
+
